--- a/src/EasyRoom/AppBundle/Resources/views/Salle/form_recherche.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/form_recherche.html.twig
@@ -2,7 +2,7 @@
   <div class="row">
     <h3>Réservez une salle</h3>
     <div class="input-field col m2">
-      <input id="effectif" type="number" class="validate" name="effectif">
+      <input id="effectif" type="number" class="validate" name="effectif" min="0">
       <label for="effectif">Effectif</label>
     </div>
     <div class="input-field col m3">
