--- a/src/EasyRoom/AppBundle/Resources/views/Salle/carte_resultat.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/carte_resultat.html.twig
@@ -9,7 +9,8 @@
                     </div>
                     <div class="row">
                         <p class="bottom">
-                            <i class="material-icons">people_outline</i>{{ salle.DispositionParDefaut.nbPlace }}
+                            <i class="material-icons">people_outline</i>{{ salle.DispositionParDefaut.nbPlace }}<br/>
+                            <i class="material-icons">settings_overscan</i>{{ salle.DispositionParDefaut.disposition.libelle }}
                         </p>
                     </div>
                 </div>
@@ -18,7 +19,7 @@
                 </div>
             </div>
             <div class="card-action">
-                <a class="learn-more-link" href="{{ path('easy_room_app_salle_fiche') }}">En savoir +</a>
+                <a class="learn-more-link" href="{{ path('easy_room_app_salle_fiche', {'idSalle': salle.id}) }}">En savoir +</a>
                 <a class="book-link" href="#">Réserver</a>
             </div>
         </div>
