--- a/src/EasyRoom/AppBundle/Resources/views/Login/index.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Login/index.html.twig
@@ -22,20 +22,20 @@ and open the template in the editor.
 <body class="valign-wrapper" style="background-image:url({{ asset('bundles/easyroomapp/dist/images/login-bg.jpg') }})">
 <main class="valign">
     <div class="row">
-        <form class="card-panel" action="{{ path('easy_room_app_login_authentification') }}">
+        <form class="card-panel" action="{{ path('easy_room_app_accueil_index') }}" method="post">
 
         <div id="logo">
             <img src="{{ asset('bundles/easyroomapp/dist/images/logo-login.png') }}" alt="Logo Easyroom">
         </div>
             <div class="input-field col s12">
                 <i class="material-icons prefix">account_circle</i>
-                <input id="icon_prefix" type="email" class="validate" required>
-                <label for="icon_prefix">Adresse mail</label>
+                <input id="username" type="email" class="validate" required value="{{ last_username }}">
+                <label for="username">Adresse mail</label>
             </div>
             <div class="input-field col s12">
                 <i class="material-icons prefix">lock</i>
-                <input id="icon_lock" type="password" class="validate" required>
-                <label for="icon_lock">Mot de passe</label>
+                <input id="password" type="password" class="validate" required>
+                <label for="password">Mot de passe</label>
             </div>
             <div class="submit col s12 center-align">
                 <button class="btn waves-effect waves-light" type="submit" name="action">Se connecter</button>
@@ -44,6 +44,9 @@ and open the template in the editor.
                 <a href="#" class="forgot">Mot de passe oublié ?</a>
             </p>
         </form>
+        {% if error %}
+            {{ error.message }}
+        {% endif %}
     </div>
 </main>
 <footer>
