--- a/src/EasyRoom/AppBundle/Resources/public/sass/style.scss
+++ b/src/EasyRoom/AppBundle/Resources/public/sass/style.scss
@@ -39,6 +39,10 @@ nav {
 
 .dropdown-content li>a, .dropdown-content li>span {color:$blue-easyroom}
 
+#dropdown_profile {
+  width: auto;
+}
+
 #sidenav-overlay {z-index:0}
 
 
