--- a/src/EasyRoom/AppBundle/Resources/views/Salle/search_salle.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/search_salle.html.twig
@@ -5,7 +5,7 @@
     <link type="text/css" rel="stylesheet" href="{{ asset('bundles/easyroomapp/dist/css/search_salle.css') }}"/>
 {% endblock %}
 
-{# Contenu du block navbar #}
+{# Contenu du block main #}
 {% block main %}
     <section class="row recherche valign-wrapper">
         <div class="container">
@@ -25,7 +25,7 @@
     </section>
 {% endblock %}
 
-{# Contenu du block navbar #}
+{# Contenu du block js #}
 {% block javascript %}
     <script src="{{ asset('bundles/easyroomapp/dist/js/materialize.clockpicker.js') }}"></script>
     <script src="{{ asset('bundles/easyroomapp/dist/js/recherche_salle.js') }}"></script>
