--- a/src/EasyRoom/AppBundle/Resources/views/Equipement/add.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Equipement/add.html.twig
@@ -49,7 +49,8 @@
           </div>
         </div>
         <div>
-            <input type="submit" value="Valider" />
+            <button class="btn waves-effect waves-light" type="reset" name="reset">Effacer<i class="material-icons right">clear</i></button>
+            <button class="btn waves-effect waves-light" type="submit" name="submit">Valider<i class="material-icons right">done</i></button>
         </div>
         {{ form_end(form)}}
       </div>
