--- a/src/EasyRoom/AppBundle/Resources/views/template_parent.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/template_parent.html.twig
@@ -44,7 +44,7 @@ and open the template in the editor.
                         <li class="menu_accueil"><a href="{{ path('index') }}">Accueil</a></li>
                         <li class="menu_salles"><a class="dropdown-button" href="#" data-activates='dropdown_salle'>Salles</a></li>
                             {% if is_granted('ROLE_ADMIN') %}
-                            <li class="menu_equipements"><a href="#">Équipements</a></li>
+                            <li class="menu_equipements"><a href="{{ path('easy_room_app_equipement') }}">Équipements</a></li>
                             <li class="menu_utilisateurs"><a href="{{ path('easy_room_user_list') }}">Utilisateurs</a></li>
                             {% endif %}
                         <!-- Dropdown Trigger -->
@@ -57,7 +57,7 @@ and open the template in the editor.
                         <li class="menu_recherche_salle"><a href="{{ path('easy_room_app_salle_search') }}">Salles</a></li>
                         <li class="menu_creation_salle"><a href="{{ path('easy_room_app_salle_creation') }}">Créer une salle</a></li>
                             {% if is_granted('ROLE_ADMIN') %}
-                            <li class="menu_equipements"><a href="#">Équipements</a></li>
+                            <li class="menu_equipements"><a href="{{ path('easy_room_app_equipement') }}">Équipements</a></li>
                             <li class="menu_utilisateurs"><a href="{{ path('easy_room_user_list') }}">Utilisateurs</a></li>
                             {% endif %}
                         <li class="menu_mes_reservations"><a href="#">Mes réservations</a></li>
