--- a/src/EasyRoom/AppBundle/Resources/views/Equipement/edit.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Equipement/edit.html.twig
@@ -8,56 +8,77 @@
 {# Contenu du block main #}
 {% block main %}
     {# (Contenu obligatoire) ici doit être ajouté le contenu de l'écran #}
+    <div>
+        Équipement
+    </div>
     <div class="container">
-      <div class="row">
-        {{ form_start(form, {'method' : 'post', 'action' : path('easy_room_app_equipement_add')}) }}
-        <div class="row">
-          <div class="input-field col s12">
-            {{ form_row(form.libelle) }}
-          </div>
-        </div>
-        <div class="row">
-          <div class="input-field col s12">
-            {{ form_widget(form.typeEquipement, {'attr': {'class': 'initialized'}}) }}
-            {{ form_label(form.typeEquipement) }}
-            {{ form_errors(form.typeEquipement) }}
-          </div>
-        </div>
-        <div class="row">
-          <div class="input-field col s12">
-            {{ form_row(form.reference) }}
-          </div>
-        </div>
-        <div class="row">
-          <div class="input-field col s12">
-            {{ form_widget(form.description, {'attr': {'class': 'materialize-textarea'}}) }}
-            {{ form_label(form.description) }}
-            {{ form_errors(form.description) }}
-          </div>
-        </div>
-        <div class="row">
-          <div class="col s12">
-            {{ form_widget(form.disponible) }}
-            {{ form_errors(form.disponible) }}
-          </div>
-        </div>
-        <div class="row">
-          <div class="input-field col s12">
-            {{ form_widget(form.salle, {'attr': {'class': 'initialized'}}) }}
-            {{ form_label(form.salle) }}
-            {{ form_errors(form.salle) }}
-          </div>
+        <div>
+            {# On affiche tous les messages flash dont le nom est « error » #}
+            {% if app.session.flashBag.has('error') %}
+                <i class="material-icons">sentiment_very_dissatisfied</i>
+                {% for message in app.session.flashBag.get('error') %}
+                    <p>{{ message }}</p>
+                {% endfor %}
+            {% endif %}
         </div>
         <div>
-            <button class="btn waves-effect waves-light" type="reset" name="reset">Effacer<i class="material-icons right">clear</i></button>
-            <button class="btn waves-effect waves-light" type="submit" name="submit">Valider<i class="material-icons right">done</i></button>
+            {# On affiche tous les messages flash dont le nom est « info » #}
+            {% if app.session.flashBag.has('info')%}
+                <i class="material-icons">sentiment_very_satisfied</i>
+                {% for message in app.session.flashBag.get('info') %}
+                    <p>{{ message }}</p>
+                {% endfor %}
+            {% endif %}
+        </div>  
+        <div class="row">
+            {{ form_start(form, {'method' : 'post', 'action' : path('easy_room_app_equipement_edit', {'idEquipement' : idEquipement })}) }}
+            <div class="row">
+                <div class="input-field col s12">
+                    {{ form_row(form.libelle) }}
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    {{ form_widget(form.typeEquipement, {'attr': {'class': 'initialized'}}) }}
+                    {{ form_label(form.typeEquipement) }}
+                    {{ form_errors(form.typeEquipement) }}
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    {{ form_row(form.reference) }}
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    {{ form_widget(form.description, {'attr': {'class': 'materialize-textarea'}}) }}
+                    {{ form_label(form.description) }}
+                    {{ form_errors(form.description) }}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12">
+                    {{ form_widget(form.disponible) }}
+                    {{ form_errors(form.disponible) }}
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    {{ form_widget(form.salle, {'attr': {'class': 'initialized'}}) }}
+                    {{ form_label(form.salle) }}
+                    {{ form_errors(form.salle) }}
+                </div>
+            </div>
+            <div>
+                <button class="btn waves-effect waves-light" type="reset" name="reset">Effacer<i class="material-icons right">clear</i></button>
+                <button class="btn waves-effect waves-light" type="submit" name="submit">Valider<i class="material-icons right">done</i></button>
+            </div>
+            {{ form_end(form)}}
         </div>
-        {{ form_end(form)}}
-      </div>
     </div>
 {% endblock %}
 
 {# Contenu du block javascript #}
 {% block javascript %}
-  <script src="{{ asset('bundles/easyroomapp/dist/js/equipement_add.js') }}"></script>
+    <script src="{{ asset('bundles/easyroomapp/dist/js/equipement_add.js') }}"></script>
 {% endblock %}
