--- a/src/EasyRoom/AppBundle/Resources/views/Salle/list.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/list.html.twig
@@ -3,11 +3,73 @@
 {# Contenu du block stylesheets #}
 {% block stylesheets %}
     {# (Contenu optionnel) ici doit être ajouté seulement des balises <link> pour faire appel à des fichiers css spécifiques à la vue #}
+    <link type="text/css" rel="stylesheet" href="{{ asset('bundles/easyroomapp/dist/css/list_salle.css') }}"/>
 {% endblock %}
 
 {# Contenu du block main #}
 {% block main %}
     {# (Contenu obligatoire) ici doit être ajouté le contenu de l'écran #}
+
+    <div class="row" id="photo-salle"></div>
+
+    <section class="row container">
+        <div class="col s8">
+        </div>
+        <div class="col s4 titre-page">
+            <h5>Salles</h5>
+        </div>
+        <div class="col s12 liste-salle">
+            <table class="striped">
+                <thead>
+                    <tr>
+                        <th>Libellé</th>
+                        <th>Éffectif par défaut</th>
+                        <th>Disponible</th>
+                        <th>Jour</th>
+                        <th>Accès handicapé</th>
+                        <th>Réservation(s)</th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for salle in salles %}
+                        <tr>
+                            <td>{{ salle.libelle }}</td>
+                            <td>{{ salle.DispositionParDefaut.nbPlace }}</td>
+                            <td>
+                                {% if salle.disponible %}
+                                    <i class="material-icons">check_box</i>
+                                {% else %}
+                                    <i class="material-icons">check_box_outline_blank</i>
+                                {% endif %}
+                            </td>
+                            <td>
+                                {% if salle.lumiereJour %}
+                                    <i class="material-icons">check_box</i>
+                                {% else %}
+                                    <i class="material-icons">check_box_outline_blank</i>
+                                {% endif %}
+                            </td>
+                            <td>
+                                {% if salle.handicap %}
+                                    <i class="material-icons">check_box</i>
+                                {% else %}
+                                    <i class="material-icons">check_box_outline_blank</i>
+                                {% endif %}
+                            </td>
+                            <td>{{ salle.reservations|length }}</td>
+                            <td><a href="{{ path('easy_room_app_salle_edit', {'idSalle': salle.id}) }}" class="waves-effect waves-light btn"><i class="material-icons">mode_edit</i></a></td>
+                            <td><a href="{{ path('easy_room_app_salle_delete', {'idSalle': salle.id}) }}" class="waves-effect waves-light btn"><i class="material-icons">delete_forever</i></a></td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        <div><a href="{{ path('easy_room_app_equipement_add') }}"><i class="material-icons">add</i></a></div>
+    </section>
+
 {% endblock %}
 
 {# Contenu du block javascript #}
