--- a/src/EasyRoom/AppBundle/Resources/views/Salle/list.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/list.html.twig
@@ -67,7 +67,7 @@
                 </tbody>
             </table>
         </div>
-        <div><a href="{{ path('easy_room_app_equipement_add') }}"><i class="material-icons">add</i></a></div>
+        <div><a href="{{ path('easy_room_app_equipement_add') }}" class="waves-effect waves-light btn"><i class="material-icons right">add</i> Ajouter une salle</a></div>
     </section>
 
 {% endblock %}
