--- a/src/EasyRoom/AppBundle/Resources/views/Salle/carte_resultat.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/carte_resultat.html.twig
@@ -9,8 +9,8 @@
                     </div>
                     <div class="row">
                         <p class="bottom">
-                            <i class="material-icons">people_outline</i>{{ salle.DispositionParDefaut.nbPlace }}<br/>
-                            <i class="material-icons">settings_overscan</i>{{ salle.DispositionParDefaut.disposition.libelle }}
+                            <i class="material-icons">people_outline</i>{{ salle.DispositionSalleParDefaut.nbPlace }}<br/>
+                            <i class="material-icons">settings_overscan</i>{{ salle.DispositionSalleParDefaut.disposition.libelle }}
                         </p>
                     </div>
                 </div>
