--- a/src/EasyRoom/AppBundle/Resources/views/Salle/fiche.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/fiche.html.twig
@@ -13,7 +13,7 @@
 	<section class="row description-resa container">
 		<div class="col s8 description">
 			<h4>{{ salle.libelle }}</h4>
-			<p>{{ salle.DispositionParDefaut.nbPlace }} max.</p>
+			<p>{{ salle.DispositionSalleParDefaut.nbPlace }} max.</p>
 			<p class="summary">{{ salle.description }}</p>
 		</div>
 		<div class="col s4 reservation">
