--- a/src/EasyRoom/AppBundle/Resources/views/Salle/list.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/list.html.twig
@@ -37,7 +37,7 @@
                     {% for salle in salles %}
                         <tr>
                             <td>{{ salle.libelle }}</td>
-                            <td>{{ salle.DispositionParDefaut.nbPlace }}</td>
+                            <td>{{ salle.DispositionSalleParDefaut.nbPlace }}</td>
                             <td>
                                 {% if salle.disponible %}
                                     <i class="material-icons">check_box</i>
@@ -67,7 +67,7 @@
                 </tbody>
             </table>
         </div>
-        <div><a href="{{ path('easy_room_app_equipement_add') }}" class="waves-effect waves-light btn"><i class="material-icons right">add</i> Ajouter une salle</a></div>
+        <div><a href="{{ path('easy_room_app_salle_add') }}" class="waves-effect waves-light btn"><i class="material-icons right">add</i> Ajouter une salle</a></div>
     </section>
 
 {% endblock %}
