Ajouter une salle : écriture en bdd + upload photo salle

--- a/src/EasyRoom/AppBundle/Resources/public/sass/list_salle.scss
+++ b/src/EasyRoom/AppBundle/Resources/public/sass/list_salle.scss
@@ -11,8 +11,8 @@ and open the template in the editor.
 @import "_variables.scss";
 
 #photo-salle {
-  min-height:500px;
-  background: url(../images/photos_salles/salle-hipster.jpg) 50% 70%;
+  min-height:150px;
+  background-color: $green-easyroom;
   background-size: cover;
 }
 
