--- a/src/EasyRoom/AppBundle/Resources/views/Form/fields.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Form/fields.html.twig
@@ -57,7 +57,7 @@
     {% if type == 'file'%}
         <div class="file-field input-field">
             <div class="btn">
-                <span>Image</span>
+                <span>Photo</span>
                 <input type="{{ type }}" {{ block('widget_attributes') }} {% if value is not empty %}value="{{ value }}" {% endif %}>
             </div>
             <div class="file-path-wrapper">
