--- a/src/EasyRoom/AppBundle/Resources/public/sass/edit_salle.scss
+++ b/src/EasyRoom/AppBundle/Resources/public/sass/edit_salle.scss
@@ -32,7 +32,13 @@ and open the template in the editor.
   }
 }
 
+#photoSalle  {
+    height: 200px;
+    width: 300px;
+}
+
 #photoSalle {
     height: 200px;
     width: 300px;
+    border: solid 2px $blue-easyroom;
 }
