--- a/src/EasyRoom/AppBundle/Resources/views/Salle/add.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/add.html.twig
@@ -9,7 +9,7 @@
 {# Contenu du block main #}
 {% block main %}
     {# (Contenu obligatoire) ici doit être ajouté le contenu de l'écran #}
-    <div class="row" id="photo-salle"></div>
+    <div class="row entete-admin"></div>
 
     <section class="row container">
         <div class="col s8">
