--- a/src/EasyRoom/AppBundle/Resources/views/Salle/carte_resultat.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/carte_resultat.html.twig
@@ -15,7 +15,7 @@
                     </div>
                 </div>
                 <div class="col s6 card-image">
-                    <img src="{{ asset('bundles/easyroomapp/dist/images/card_salle_hipster.jpg') }}">
+                    <img src="{{ asset(salle.photoPath) }}" class="photo-mini">
                 </div>
             </div>
             <div class="card-action">
