--- a/src/EasyRoom/AppBundle/Resources/public/sass/salle_edit.scss
+++ b/src/EasyRoom/AppBundle/Resources/public/sass/salle_edit.scss
@@ -10,12 +10,6 @@ and open the template in the editor.
 
 @import "_variables.scss";
 
-#photo-salle {
-  min-height:150px;
-  background-color: $green-easyroom;
-  background-size: cover;
-}
-
 .container {
   width:90%;
   max-width:1300px;
@@ -32,12 +26,7 @@ and open the template in the editor.
   }
 }
 
-#photoSalle  {
-    height: 200px;
-    width: 300px;
-}
-
-#photoSalle {
+.photo-salle {
     height: 200px;
     width: 300px;
     border: solid 2px $blue-easyroom;
