--- a/src/EasyRoom/AppBundle/Resources/public/sass/salle_search.scss
+++ b/src/EasyRoom/AppBundle/Resources/public/sass/salle_search.scss
@@ -1,46 +1,48 @@
 @import "_variables.scss";
 
 section.recherche {
-  background-color: $blue-easyroom;
-  min-height:250px;
-  h3 {color: $white; font-size: 2em;}
-  input.valid {
-    border-bottom: 1px solid $white;
-    box-shadow: 0 1px 0 0 $white
-  }
+    background-color: $blue-easyroom;
+    min-height:250px;
+    h3 {color: $white; font-size: 2em;}
+    input.valid {
+        border-bottom: 1px solid $white;
+        box-shadow: 0 1px 0 0 $white
+    }
 
-  input, input:focus:not([readonly]) {
-    color: #fff;
+    input, input:focus:not([readonly]) {
+        color: #fff;
 
-    border-bottom: 1px solid $white
-  }
+        border-bottom: 1px solid $white
+    }
 
-  .input-field label, input:focus:not([readonly]) + label {
-    color: darken( $blue-easyroom, 20% );
-  }
+    .input-field label, input:focus:not([readonly]) + label {
+        color: darken( $blue-easyroom, 20% );
+    }
 
-  .btn, .btn-large {
-    text-decoration: none;
-    color: $blue-easyroom;
-    background-color: $white;
-  }
+    .btn, .btn-large {
+        text-decoration: none;
+        color: $blue-easyroom;
+        background-color: $white;
+    }
 }
 
 section.resultats-recherche {
-  h3 {color: $blue-easyroom; font-size: 2.5em;margin-bottom:1em;}
+    h3 {color: $blue-easyroom; font-size: 2.5em;margin-bottom:1em;}
 
-  .card-action {
-    position:relative;
-    min-height: 55px;
-    a.learn-more-link {position:absolute; left: 1em; color:$blue-easyroom !important;}
-    a.book-link{position:absolute; right:-0.4em;font-weight:bold; color:$green-easyroom !important;}
-  }
+    .card-action {
+        position:relative;
+        min-height: 55px;
+        a.learn-more-link {position:absolute; left: 1em; color:$blue-easyroom !important;}
+        a.book-link{position:absolute; right:-0.4em;font-weight:bold; color:$green-easyroom !important;}
+    }
 }
 
 .picker__frame {
-  max-width: 355px;
-  width: 355px
+    max-width: 355px;
+    width: 355px
 }
 
-
-
+.photo-mini {
+    width: 200px;
+    height: 200px;
+}
