--- a/src/EasyRoom/AppBundle/Resources/views/Salle/edit.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/edit.html.twig
@@ -9,7 +9,7 @@
 {# Contenu du block main #}
 {% block main %}
     {# (Contenu obligatoire) ici doit être ajouté le contenu de l'écran #}
-    <div class="row" id="photo-salle"></div>
+    <div class="row entete-admin"></div>
 
     <section class="row container">
         <div class="col s8">
@@ -52,7 +52,7 @@
                         <div class="col s6">
                             {% if salle.extensionPhoto is not null %}
                                 <div id="cadre_photoSalle">
-                                    <img id="photoSalle" src="{{ asset(salle.photoPath) }}" />
+                                    <img class="photo-salle" src="{{ asset(salle.photoPath) }}" />
                                 </div>
                                 <button class="btn waves-effect waves-light" data-target="modal_delete_photo" id="delete_photo" name="delete_photo"><i class="material-icons">delete_forever</i></button>
                                 <div id="modal_delete_photo" class="modal">
