--- a/src/EasyRoom/AppBundle/Resources/views/Salle/fiche.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/fiche.html.twig
@@ -9,7 +9,7 @@
 {# Contenu du block navbar #}
 {% block main %}
 
-	<div class="row" id="photo-salle"></div>
+	<div class="row entete-photo-salle"></div>
 
 	<section class="row description-resa container">
 		<div class="col s8 description">
