--- a/src/EasyRoom/AppBundle/Resources/views/Salle/fiche_style.css.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/fiche_style.css.twig
@@ -1,5 +1,5 @@
 {# empty Twig template #}
-#photo-salle {
+.entete-photo-salle {
   min-height:500px;
   background: url({{ asset(photoPath) }}) 50% 70%;
   background-size: cover;
