--- a/src/EasyRoom/AppBundle/Resources/views/Salle/list.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/list.html.twig
@@ -10,7 +10,7 @@
 {% block main %}
     {# (Contenu obligatoire) ici doit être ajouté le contenu de l'écran #}
 
-    <div class="row" id="photo-salle"></div>
+    <div class="row entete-admin"></div>
 
     <section class="row container">
         <div class="col s8">
