--- a/src/EasyRoom/AppBundle/Resources/public/sass/equipement_edit.scss
+++ b/src/EasyRoom/AppBundle/Resources/public/sass/equipement_edit.scss
@@ -4,9 +4,13 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
 /* 
-    Created on : 6 juil. 2017, 15:53:28
+    Created on : 1 août 2017, 18:59:35
     Author     : ffortin
 */
+
+@import "_variables.scss";
+
 .container {
-  width: 90%;
-  max-width: 1300px; }
+  width:90%;
+  max-width:1300px;
+}
