--- a/src/EasyRoom/AppBundle/Resources/views/Salle/list.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/list.html.twig
@@ -18,7 +18,7 @@
         <div class="col s4 titre-page">
             <h5>Salles</h5>
         </div>
-        <div class="col s12 liste-salle">
+        <div class="col s12">
             <div class="row">
                 <div class="col s12">
                     {# On affiche tous les messages flash dont le nom est « info » #}
