Ecran : rajouter une réservation

--- a/src/EasyRoom/AppBundle/Resources/public/sass/accueil.scss
+++ b/src/EasyRoom/AppBundle/Resources/public/sass/accueil.scss
@@ -66,10 +66,7 @@ section.join-meeting {
   }
 }
 
-.picker__frame {
-  max-width: 355px;
-  width: 355px
+.photo-mini {
+    width: 200px;
+    height: 200px;
 }
-
-
-
