--- a/src/EasyRoom/AppBundle/Resources/views/Accueil/accueil.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Accueil/accueil.html.twig
@@ -33,6 +33,6 @@
 
 {# Contenu du block navbar #}
 {% block javascript %}
-    <script src="{{ asset('bundles/easyroomapp/dist/js/materialize.clockpicker.js') }}"></script>
+    <script src="{{ asset('bundles/easyroomapp/dist/js/easyroom-clockpicker-config.js') }}"></script>
     <script src="{{ asset('bundles/easyroomapp/dist/js/accueil.js') }}"></script>
 {% endblock %}
