--- a/src/EasyRoom/AppBundle/Resources/views/Reservation/carte_ma_reservation.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Reservation/carte_ma_reservation.html.twig
@@ -4,22 +4,22 @@
             <div class="card-content row">
                 <div class="card-description col s6">
                     <div class="row">
-                      <h4>{{ reservation.salle.libelle }}</h4>
-                      <p>{{ reservation.salle.description[:70]~'...' }}</p>
+                        <h4>{{ reservation.salle.libelle }}</h4>
+                        <p>{{ reservation.salle.description[:70]~'...' }}</p>
                     </div>
                     <div class="row">
                         <p class="bottom">
                             <i class="material-icons">today</i><br/>
 
-                                <span class="lib-date">Début :</span>
-                                {{ reservation.dateDebut|date('d/m/Y H:i') }}<br/>
-                               <span class="lib-date">Fin :</span>
-                                {{ reservation.dateFin|date('d/m/Y H:i') }}                        
+                            <span class="lib-date">Début :</span>
+                            {{ reservation.dateDebut|date('d/m/Y H:i') }}<br/>
+                            <span class="lib-date">Fin :</span>
+                            {{ reservation.dateFin|date('d/m/Y H:i') }}                        
                         </p>
                     </div>
                 </div>
                 <div class="col s6 card-image">
-                    <img src="{{ asset('bundles/easyroomapp/dist/images/card_salle_hipster.jpg') }}">
+                    <img src="{{ asset(reservation.salle.photoPath) }}" class="photo-mini">
                 </div>
             </div>
             <div class="card-action right-align">
