--- a/src/EasyRoom/AppBundle/Resources/views/Salle/form_recherche.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/form_recherche.html.twig
@@ -11,7 +11,7 @@
     </div>
     <div class="input-field col m2">
       <label for="heure_debut">Heure début</label>
-      <input id="heure_debut" class="timepicker" type="time" name="heure_debut">
+      <input id="heure_debut" class="timepicker" type="text" name="heure_debut">
     </div>
     <div class="input-field col m3">
       <input id="date_fin" type="date" class="datepicker" name="date_fin">
@@ -19,7 +19,7 @@
     </div>
     <div class="input-field col m2">
       <label for="heure_fin">Heure fin</label>
-      <input id="heure_fin" class="timepicker" type="time" name="heure_fin">
+      <input id="heure_fin" class="timepicker" type="text" name="heure_fin">
     </div>
     <div class="submit col s12 center-align">
       <button class="btn waves-effect waves-light" type="submit" name="action">Rechercher</button>
