--- a/src/EasyRoom/AppBundle/Resources/views/Salle/search_salle.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/search_salle.html.twig
@@ -27,6 +27,6 @@
 
 {# Contenu du block js #}
 {% block javascript %}
-    <script src="{{ asset('bundles/easyroomapp/dist/js/materialize.clockpicker.js') }}"></script>
+    <script src="{{ asset('bundles/easyroomapp/dist/js/easyroom-clockpicker-config.js') }}"></script>
     <script src="{{ asset('bundles/easyroomapp/dist/js/salle_search.js') }}"></script>
 {% endblock %}
