--- a/src/EasyRoom/AppBundle/Resources/views/Salle/fiche.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/fiche.html.twig
@@ -2,73 +2,73 @@
 
 {# Contenu du block stylesheets #}
 {% block stylesheets %}
-	<link type="text/css" rel="stylesheet" href="{{ asset('bundles/easyroomapp/dist/css/salle_show.css') }}"/>
-	<link type="text/css" rel="stylesheet" href="{{ path('easy_room_app_salle_fiche_css', {'idSalle' : salle.id}) }}"/>
+    <link type="text/css" rel="stylesheet" href="{{ asset('bundles/easyroomapp/dist/css/salle_show.css') }}"/>
+    <link type="text/css" rel="stylesheet" href="{{ path('easy_room_app_salle_fiche_css', {'idSalle' : salle.id}) }}"/>
 {% endblock %}
 
 {# Contenu du block navbar #}
 {% block main %}
 
-	<div class="row entete-photo-salle"></div>
+    <div class="row entete-photo-salle"></div>
 
-	<section class="row description-resa container">
-		<div class="col s8 description">
-			<h4>{{ salle.libelle }}</h4>
-			<p>Capacité maximale (disposition par défaut) : {{ salle.DispositionSalleParDefaut.nbPlace }}</p>
-			<p class="summary">{{ salle.description }}</p>
-		</div>
-		<div class="col s4 reservation">
-			<h5>Réservation</h5>
-			<form class="card" action="#">
-				<div class="input-field">
-					<input id="effectif" type="number" class="validate">
-					<label for="effectif">Effectif</label>
-				</div>
-				<div class="row debut">
-					<div class="input-field col s6">
-						<input id="date_debut" type="date" class="datepicker">
-						<label for="date_debut">Date début</label>
-					</div>
-					<div class="input-field col s6">
-						<label for="heure_debut">Heure début</label>
-						<input id="heure_debut" class="timepicker" type="time">
-					</div>
-				</div>
-				<div class="row">
-					<div class="input-field col s6">
-						<input id="date_fin" type="date" class="datepicker">
-						<label for="date_fin">Date fin</label>
-					</div>
-					<div class="input-field col s6">
-						<label for="heure_fin">Heure fin</label>
-						<input id="heure_fin" class="timepicker" type="time">
-					</div>
-				</div>
-				<div class="submit center-align">
-					<button class="btn waves-effect waves-light" type="submit" name="action">Réserver</button>
-				</div>
-			</form>
-		</div>
-	</section>
+    <section class="row description-resa container">
+        <div class="col s8 description">
+            <h4>{{ salle.libelle }}</h4>
+            <p>Capacité maximale (disposition par défaut) : {{ salle.DispositionSalleParDefaut.nbPlace }}</p>
+            <p class="summary">{{ salle.description }}</p>
+        </div>
+        <div class="col s4 reservation">
+            <h5>Réservation</h5>
+            <form class="card" action="{{ path('easy_room_app_reservation_add', {'idSalle' : salle.id }) }}" method="post">
+                <div class="input-field">
+                    <input id="effectif" type="number" class="validate">
+                    <label for="effectif">Effectif</label>
+                </div>
+                <div class="row debut">
+                    <div class="input-field col s6">
+                        <input id="date_debut" name="date_debut" type="date" class="datepicker">
+                        <label for="date_debut">Date début</label>
+                    </div>
+                    <div class="input-field col s6">
+                        <label for="heure_debut">Heure début</label>
+                        <input id="heure_debut" name="heure_debut" class="timepicker" type="text">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s6">
+                        <input id="date_fin" name="date_fin" type="date" class="datepicker">
+                        <label for="date_fin">Date fin</label>
+                    </div>
+                    <div class="input-field col s6">
+                        <label for="heure_fin">Heure fin</label>
+                        <input id="heure_fin" name="heure_fin" class="timepicker" type="text">
+                    </div>
+                </div>
+                <div class="submit center-align">
+                    <button class="btn waves-effect waves-light" type="submit" name="action">Réserver</button>
+                </div>
+            </form>
+        </div>
+    </section>
 
-	<section class="capacites-caracteristiques row container">
+    <section class="capacites-caracteristiques row container">
         <div class="col s6 capacites">
             <h5>Capacités</h5>
             <ul>
                 {% for dispositionSalle in salle.dispositionSalles %}
                     <li>{{ dispositionSalle.disposition.libelle }} : <span class="bold">{{ dispositionSalle.nbPlace }}</span></li><br/>
-                {% endfor %}
+                    {% endfor %}
             </ul>
         </div>
         <div class="col s6 caracteristiques">
             <h5>Caractéristiques</h5>
             <ul>
                 {% if salle.handicap %}
-                <li><i class="material-icons">accessible</i> Accessible</li><br/>
-                {% endif %}
-                {% if salle.lumiereJour %}
-                <li><i class="material-icons">wb_sunny</i> Lumière du jour</li><br/>
-                {% endif %}
+                    <li><i class="material-icons">accessible</i> Accessible</li><br/>
+                    {% endif %}
+                    {% if salle.lumiereJour %}
+                    <li><i class="material-icons">wb_sunny</i> Lumière du jour</li><br/>
+                    {% endif %}
             </ul>
         </div>
     </section>
@@ -77,7 +77,7 @@
         <ul>
             {% for equipement in salle.equipements %}
                 <li>{{ equipement.libelle }}</li>
-            {% endfor %}
+                {% endfor %}
         </ul>
     </section>
 
@@ -86,6 +86,6 @@
 
 {# Contenu du block navbar #}
 {% block javascript %}
-	<script src="{{ asset('bundles/easyroomapp/dist/js/materialize.clockpicker.js') }}"></script>
-	<script src="{{ asset('bundles/easyroomapp/dist/js/salle_show.js') }}"></script>
+    <script src="{{ asset('bundles/easyroomapp/dist/js/easyroom-clockpicker-config.js') }}"></script>
+    <script src="{{ asset('bundles/easyroomapp/dist/js/salle_show.js') }}"></script>
 {% endblock %}
